corrected adaptive in global file and added function to checkbox component for truncating label string

--- a/src/components/ui/checkbox/Checkbox.module.scss
+++ b/src/components/ui/checkbox/Checkbox.module.scss
@@ -24,7 +24,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: inline-block;
-	max-width: 70%;
+	// max-width: 70%;
 }
 
 .block__checkbox {
